<?xml version="1.0"?>
<package>
  <name>print_squares</name>
  <version>1.0.0</version>
  <description>The square printing package</description>

  <maintainer email="prabhat.agr2010@gmail.com">Prabhat Agarwal</maintainer>
  
  <license>BSD</license>

  <author email="prabhat.agr2010@gmail.com">Prabhat Agarwal</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
