<?xml version="1.0"?>
<package>
  <name>lovishpuri_print_squares</name>
  <version>0.0.0</version>
  <description>The print_squares_pkg package</description>

  <maintainer email="lovishpuri@gmail.com">lovish</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
<build_depend>genmsg</build_depend>

  <run_depend>roscpp</run_depend>
 <run_depend>rocpy</run_depend>
  <run_depend>std_msgs</run_depend>
<run_depend>genmsg</run_depend>
  <export>

  </export>
</package>
